--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/auth/google/(.*)", "dest": "/auth/google/$1" },
     { "src": "/(.*)", "dest": "/" }
   ]
 }
